adding form for researchers to add new articles to the datbase

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -3,4 +3,8 @@
 {% block title %}Dashboard | {{ block.super }}{% endblock %}
 
 {% block body %}
+<h1>Hello {{ user.username|title }}!</h1>
+<div>
+    <a id="new_article_link" href="{% url 'research new article' %}">Add new article</a>
+</div>
 {% endblock %}
