Add some errors to the front page when login fails.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,5 +1,12 @@
 /* Custom CSS for the site */
 
-div.auth-form {
+.auth-form {
   max-width: 500px;
+}
+
+.form-error {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  max-width: 768px;
+  display: inline-block;
 }
