Add functional tests for logout, and add a logout button to the navbar.

--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -2,9 +2,9 @@
 Navigation bar across the top of the site for the researcher view.
 {% endcomment %}
 
-<nav class="navbar dashboard-navbar">
+<nav class="navbar dashboard-navbar" id="navbar">
   <ul class="navbar-nav ml-auto mt-2">
-    <a class="nav-link"> {# href="{% url 'logout' %}"> #}
+    <a class="nav-link" href="{% url 'research logout' %}">
       <button class="btn btn-primary" id="logout-button">
         Logout
       </button>
