Style the 'add new article' button in the dashboard.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -15,6 +15,12 @@ html {
   display: inline-block;
 }
 
+.action-icon {
+  display: inline-block;
+  vertical-align: middle;
+  height: 2rem;
+}
+
 /*****************************
  * CSS for dashboard sidebar
  *****************************/
