--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -37,6 +37,7 @@ html {
 /*****************************
  * CSS for navigation bars
  *****************************/
-.dashboard-navbar {
-  background-color: #444444;
+.nav-button {
+  border-color: black;
+  border-width: 3px;
 }
