--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -2,12 +2,27 @@
 Navigation bar across the top of the site for the researcher view.
 {% endcomment %}
 
-<nav class="navbar dashboard-navbar" id="navbar">
-  <ul class="navbar-nav ml-auto mt-2">
-    <a class="nav-link" href="{% url 'research logout' %}">
-      <button class="btn btn-primary" id="logout-button">
-        Logout
+<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav mr-auto">
+
+      {% comment %}
+      User-related button. Includes options for doing things like changing settings
+      and logging out.
+      {% endcomment %}
+      <button id="user-profile-dropdown-button" class="btn p-0 nav-button">
+        <li class="p-0 nav-item dropdown">
+          <a class="px-4 nav-link dropdown-toggle" href="#" id="user-profile-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{ user.username }}
+          </a>
+          <div class="dropdown-menu" aria-labelledby="user-profile-dropdown">
+            <a class="dropdown-item" href="#">Profile</a>
+            <a class="dropdown-item" href="#">Settings</a>
+            <div class="dropdown-divider"></div>
+            <a id="logout-button" class="dropdown-item" href="{% url 'research logout' %}">Logout</a>
+          </div>
+        </li>
       </button>
-    </a>
-  </ul>
+    </ul>
+  </div>
 </nav>
