--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -15,7 +15,7 @@ Navigation bar across the top of the site for the researcher view.
           <a class="px-4 nav-link dropdown-toggle" href="#" id="user-profile-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             {{ user.username }}
           </a>
-          <div class="dropdown-menu" aria-labelledby="user-profile-dropdown">
+          <div id="user-settings-dropdown-menu" class="dropdown-menu" aria-labelledby="user-profile-dropdown">
             <a class="dropdown-item" href="#">Profile</a>
             <a class="dropdown-item" href="#">Settings</a>
             <div class="dropdown-divider"></div>
