--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -1,26 +1,18 @@
-{% extends "base.html" %}
+{% extends "dashboard_base.html" %}
 
-{% block title %}Dashboard | {{ block.super }}{% endblock %}
-
-{% block body %}
-
-{% include "includes/navbar.html" %}
+{% block contents %}
 {% load static %}
-<div class="d-flex">
-  {% include "includes/sidebar.html" %}
-  <div class="container m-2">
-    <h1>Hello {{ user.username|title }}!</h1>
-    <hr>
-    <div>
-      <a id="new_article_link" href="{% url 'research new article' %}">
-        <button class="btn btn-primary">
-          <div class="my-1">
-            <img class="action-icon mr-1" src="{% static 'svg/add.svg' %}">
-            Add new compendium entry
-          </div>
-        </button>
-      </a>
-    </div>
-  </div>
+<h1>Hello {{ user.username|title }}!</h1>
+<hr>
+<div>
+  <a id="new_article_link" href="{% url 'research new article' %}">
+    <button class="btn btn-primary">
+      <div class="my-1">
+        <img class="action-icon mr-1" src="{% static 'svg/add.svg' %}">
+        Add new compendium entry
+      </div>
+    </button>
+  </a>
 </div>
+
 {% endblock %}
