--- a/src/templates/dashboard_base.html
+++ b/src/templates/dashboard_base.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
 
-{% block title %}Dashboard | {{ block.super }}{% endblock %}
-
 {% block body %}
 
 {% include "includes/navbar.html" %}
@@ -9,7 +7,10 @@
   {% include "includes/sidebar.html" %}
 
   <div class="container m-2">
-    {% block contents %}{% endblock %}
+    {% block contents %}
+    <h1>{% block page_header %}{% endblock %}</h1>
+    <hr>
+    {% endblock %}
   </div>
 </div>
 {% endblock %}
