Tentatively remove the sidebar from the dashboard_base template. This fixes issue #9.

--- a/src/templates/dashboard_base.html
+++ b/src/templates/dashboard_base.html
@@ -4,7 +4,7 @@
 
 {% include "includes/navbar.html" %}
 <div class="d-flex">
-  {% include "includes/sidebar.html" %}
+  {# {% include "includes/sidebar.html" %} #}
 
   <div class="container m-2">
     {% block contents %}
