--- a/src/templates/change_password.html
+++ b/src/templates/change_password.html
@@ -1,4 +1,4 @@
-{% extends "dashboard_base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Change Password | {{ block.super }}{% endblock %}
 
