making some styling changes and adding classes to make website responsive

--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -2,8 +2,13 @@
 Navigation bar across the top of the site for the researcher view.
 {% endcomment %}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-  <div class="collapse navbar-collapse">
+<nav class="navbar navbar-expand-sm navbar-light bg-light" id="navbar">
+  <a class="navbar-brand mb-0 h1" href="{% url 'research dashboard' %}">The Encryption Compendium</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
 
       {% comment %}
