--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8,6 +8,10 @@ html {
   max-width: 500px;
 }
 
+.signup-form {
+  max-width: 700px;
+}
+
 .form-error {
   margin-top: 1rem;
   margin-bottom: 1rem;
