Restyle the base template for the research dashboard.

--- a/src/templates/dashboard_base.html
+++ b/src/templates/dashboard_base.html
@@ -4,9 +4,7 @@
 
 {% include "includes/navbar.html" %}
 <div class="d-flex">
-  {# {% include "includes/sidebar.html" %} #}
-
-  <div class="container m-2">
+  <div class="container-fluid mx-auto mt-4">
     {% block contents %}
     <h3>{% block page_header %}{% endblock %}</h3>
     <hr>
