--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -7,10 +7,10 @@
 
 {{ block.super }}
 {% load static %}
-<div>
+<div class="container mx-md-n5">
   <div class="row">
     {# Button to add new compendium entries #}
-    <div class="col">
+    <div class="col px-md-5">
       <a id="new_article_link" href="{% url 'research new article' %}">
         <button class="btn btn-primary">
           <div class="my-1">
@@ -21,10 +21,9 @@
       </a>
     </div>
 
-    <div class="w-100 mb-4"></div>
 
     {# Button to add new tags #}
-    <div class="col">
+    <div class="col px-md-5">
       <a id="new_tag_link" href="{% url 'research add tag' %}">
         <button class="btn btn-primary">
           <div class="my-1">
@@ -35,10 +34,8 @@
       </a>
     </div>
 
-    <div class="w-100 mb-4"></div>
-
     {% if request.user.is_staff %}
-    <div class="col">
+    <div class="col px-md-5">
       <a id="invite_user_button" href="{% url 'add new user' %}">
         <button class="btn btn-primary">
           <div class="my-1">
@@ -50,6 +47,36 @@
     </div>
     {% endif %}
 
+  </div>
+  <div class="container px-md-10 py-3">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Title</th>
+          <th scope="col">URL</th>
+          <th scope="col">Tags</th>
+          <th scope="col">Owner</th>
+        </tr>
+      </thead>
+      <tbody>
+          {% for entry in entries %}
+          <tr>
+              <th scope="row">{{ entry.id }}</th>
+              <td>{{ entry.title }}</td>
+              <td>
+                {% if entry.url %}
+                <a href="{{ entry.url}}">
+                  {{ entry.url }}
+                </a>
+                {% endif %}
+              </td>
+              <td>{{ entry.tags }}</td>
+              <td>{{ entry.owner }}</td>
+          </tr>
+          {%endfor%}
+      </tbody>
+    </table>
   </div>
 </div>
 
