--- a/src/templates/add_user.html
+++ b/src/templates/add_user.html
@@ -9,6 +9,22 @@
 <form method="POST">
   {% csrf_token %}
 
+  {% if success or form.non_field_errors %}
+  <span class="d-flex justify-content-center">
+    <div class="alert alert-success mx-auto">
+      Your invite was sent!
+    </div>
+  </span>
+  {% endif %}
+
+  {% if form.non_field_errors %}
+  <span class="d-flex justify-content-center">
+    <div class="alert alert-danger mx-auto" role="alert">
+      An error occurred: {{ form.non_field_errors }}
+    </div>
+  </span>
+  {% endif %}
+
   <div class="container-fluid float-left mb-4">
     <div class="row">
       {% for field in form %}
@@ -18,6 +34,7 @@
       <div class="col-6 mb-3">
         {{ field }}
       </div>
+      {% include "includes/field_errors.html" with errors=field.errors only %}
       <div class="w-100"></div>
       {% endfor %}
     </div>
