--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -17,7 +17,8 @@
     {% endcomment %}
     {% block css %}
     {# Bootstrap stylesheet #}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
+    {# <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/> #}
+    <link rel="stylesheet" href="{% static 'css/uikit.min.css' %}"/>
 
     {# Custom stylesheets #}
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
@@ -37,7 +38,9 @@
   {% endcomment %}
   {% block javascripts %}
   <script type="application/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
-  <script type="application/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+  {# <script type="application/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script> #}
+
+  <script type="application/javascript" src="{% static 'js/uikit.min.js' %}"></script>
   {% endblock %}
 </html>
 {% endspaceless %}
