Use UIkit to style the navbar.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -16,9 +16,9 @@
     they want to keep the CSS that's inserted below.
     {% endcomment %}
     {% block css %}
-    {# Bootstrap stylesheet #}
-    {# <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/> #}
-    <link rel="stylesheet" href="{% static 'css/uikit.min.css' %}"/>
+
+    {# UIkit stylesheet #}
+    <link rel="stylesheet" href="{% static 'css/uikit.gradient.min.css' %}"/>
 
     {# Custom stylesheets #}
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
