--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -2,7 +2,7 @@
 Navigation bar across the top of the site for the researcher view.
 {% endcomment %}
 
-<nav class="uk-navbar uk-navbar-attached">
+<nav class="uk-navbar uk-navbar-attached" id="navbar">
   <ul class="uk-navbar-nav">
     <li>
       <a class="uk-navbar-brand" href="{% url 'research dashboard' %}">
