More UIkit styling for site forms and the user settings page.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Custom CSS for the site */
 
 html {
-  font-family: sans-serif;
+  font-family: "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .auth-form {
