--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -13,7 +13,7 @@ Navigation bar across the top of the site for the researcher view.
   <div class="uk-navbar-flip">
     <ul class="uk-navbar-nav">
       <li class="uk-parent" data-uk-dropdown="" aria-haspopup="true" aria-expanded="false">
-        <a href="#">
+        <a id="user-profile-dropdown-button" href="#">
           {{ user.username }} <i class="uk-icon-caret-down"></i>
         </a>
         <div class="uk-dropdown uk-dropdown-navbar uk-dropdown-top">
