--- a/src/templates/research_settings.html
+++ b/src/templates/research_settings.html
@@ -6,13 +6,21 @@
 
 {% include "includes/navbar.html" %}
 {% load static %}
-<div class="d-flex">
-  <div class="container m-2">
-    <div class="list-group">
+<div class="uk-container uk-grid">
+
+  <ul class="uk-tab uk-tab-left uk-width-medium-1-2" data-uk-tab="{connect: '#settings_switcher'}">
+      <li class="" aria-expanded="false"><a href="#">Password</a></li>
+      <li class="" aria-expanded="false"><a href="#">Item</a></li>
+  </ul>
+
+  <ul id="settings_switcher" class="uk-switcher uk-margin">
+    <li>
       <a id="change-password-link" href="{% url 'research change password' %}" class="list-group-item list-group-item-action">
         Change password
       </a>
-    </div>
-  </div>
+    </li>
+    <li>Hello, world!</li>
+  </ul>
+
 </div>
 {% endblock %}
