changing functional tests for the reformatted pages

--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -24,7 +24,7 @@ Navigation bar across the top of the site for the researcher view.
             <a class="dropdown-item" href="{% url 'research dashboard' %}">Home</a>
             <a class="dropdown-item" href="{% url 'research profile' %}">Profile</a>
             <a class="dropdown-item" id="user-settings" href="{% url 'research settings' %}">Settings</a>
-            <a class="dropdown-item" href="{% url 'research my entries' %}">My entries</a>
+            <a class="dropdown-item" id="my-entries" href="{% url 'research my entries' %}">My entries</a>
             <div class="dropdown-divider"></div>
             <a id="logout-button" class="dropdown-item" href="{% url 'research logout' %}">Logout</a>
           </div>
