--- a/src/templates/list_my_entries.html
+++ b/src/templates/list_my_entries.html
@@ -1,6 +1,6 @@
 {% extends "dashboard_base.html" %}
 
-{% block title %}Edit | {{ block.super }}{% endblock %}
+{% block title %}My Entries | {{ block.super }}{% endblock %}
 
 {% block contents %}
 
