--- a/src/templates/my_entries_options.html
+++ b/src/templates/my_entries_options.html
@@ -1,6 +1,6 @@
 {% extends "dashboard_base.html" %}
 
-{% block title %}Settings | {{ block.super }}{% endblock %}
+{% block title %}My entries | {{ block.super }}{% endblock %}
 
 {% block body %}
 
